--- a/style.css
+++ b/style.css
@@ -1,4 +1,37 @@
+:root {
+  --main-bg-color:#87ceeb;
+}
+a {
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
 body {
+  font-family: Arial, Helvetica, sans-serif;
   max-width: 1440px;
   margin: 0 auto;
+}
+header {
+  background-color: var(--main-bg-color);
+}
+nav {
+  display: inline-flex;
+  width: 100%;
+}
+nav ul {
+  padding-left: 0;
+}
+nav li {
+  display: inline-flex;
+  padding: 5px;
+}
+nav li a {
+  color:#333;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.nav-main {
+  justify-content: center;
+  align-items: center;
 }
